CHANGE HISTORY
--------------------------------

1.9.2  11/20/10

Now catches exception of type OverflowError when calculating celsius dewpoint.
(Despite the documentation indicating otherwise, math.log() can still throw an
OverflowError)

Fixed bug that causes crash in VantagePro.accumulateLoop() during fall DST
transition in certain situations.

VP2 does not store records during the one hour fall DST transition.  Improved
logic in dealing with this.

Changed install so that it backs up the ./bin subdirectory, then overwrites
the old one. Also, does not install the ./skins subdirectory at all if one
already exists (thus preserving any user customization).


1.9.1  9/9/10

Now catches exceptions of type httplib.BadStatusLine when doing RESTful
posts.

Added an extra decimal point of precision to dew point reports to the Weather
Underground and PWS.


1.9.0  7/04/10

Added a new service, StdQC, that offers a rudimentary data check.

Corrected error in rain year total if rain year does not start in January.

Moved option max_drift (the max amount of clock drift to tolerate) to section
[Station].

Added check for a bad storm start time.

Added checks for bad dateTime.

Simplified VantagePro module.


1.8.4  6/06/10

Fixed problem that shows itself if weewx starts up at precisely the beginning of
an archive interval. Symptom is max recursion depth exceeded. 

Units for UV in LOOP records corrected. Also, introduced new group for UV,
group_uv_index. Thanks to user A. Burriel for this fix!


1.8.3  5/20/10

Problem with configuring archive interval found and fixed by user A. Burriel
(thanks, Antonio!)


1.8.2   5/9/10

Added check to skip calibration for a type that doesn't exist in LOOP or archive
records. This allows windSpeed and windGust to be calibrated separately.


1.8.1   5/1/10

Ported to Cheetah V2.4.X


1.8.0   04/28/10

Added CWOP support.

Storage of LOOP and archive data into the SQL databases is now just another
service, StdArchive.
