@@ -4,12 +4,13 @@
 ##    $Date$
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
+  <head profile="http://www.w3.org/2005/10/profile">
     #if $encoding == 'utf8'
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     #end if    
     <title>$station.location Monthly weather summary</title>
     <link rel="stylesheet" type="text/css" href="weewx.css"/>
+    <link rel="icon" type="image/png" href="favicon.ico" />
     <script type="text/javascript">
       function openURL(urlname)
       {
